Resolve reflection issues for tomcat-common tests.
Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>