@@ -119,6 +119,9 @@ configure(subprojects.findAll {it.name != 'platform'}) {
 
     test {
         useJUnitPlatform()
+        jvmArgs '--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
     }
 
     dependencies {
